remove old schedules' infos

--- a/ov.html
+++ b/ov.html
@@ -176,19 +176,19 @@ a h3::after {
     <h2 class="expandable" onclick="toggle('br4', this); return false;">Brückl 4 - Unterliga</h2>
     <div id="br4">
       <a href="uld/grundlagen"><h3>Grundlagen</h3></a>
-      <a href="uld/termine/GD4.html"><h3>Spieltermine</h3></a>
+      <a href="schedule.html?key=br4"><h3>Spieltermine</h3></a>
       <a href="tabelle.html?key=br4"><h3>Tabelle</h3></a>
     </div>
 
     <h2 class="expandable" onclick="toggle('br3', this); return false;">Brückl 3 - Unterliga</h2>
     <div id="br3">
-      <a href="uld/termine/GD3.html"><h3>Spieltermine</h3></a>
+      <a href="schedule.html?key=br3"><h3>Spieltermine</h3></a>
       <a href="tabelle.html?key=br3"><h3>Tabelle</h3></a>
     </div>
 
     <h2 class="expandable" onclick="toggle('br2', this); return false;">Brückl 2 - Landesliga</h2>
     <div id="br2">
-      <a href="lld/termine/GD.html"><h3>Spieltermine</h3></a>
+      <a href="schedule.html?key=br2"><h3>Spieltermine</h3></a>
       <a href="tabelle.html?key=br2"><h3>Tabelle</h3></a>
     </div>
   </div>
