--- a/ov.html
+++ b/ov.html
@@ -197,7 +197,7 @@ a h3::after {
   <h1 class="expandable" onclick="toggle('info', this); return false;"><br>Infos<br>&nbsp;</h1>
   <div id="info">
     <a href="info/info.html"><h3>Infos</h3></a>
-    <a href="info/alletermine.html"><h3>Alle NW-Termine (Text)</h3></a>
+    <a href="info/alletermine.html"><h3>Alle Termine</h3></a>
     <a href="info/wunschzettel.html"><h3>Ein Wunschzettel</h3></a>
   </div>
 
