use pre instead of div for improved viewing in old browsers

--- a/schedule.html
+++ b/schedule.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="/brueckl-hotvolleys/styles.css">
   <style>
-div#content {
+pre#content {
   padding: 20px;
   white-space: pre;
   font-family: monospace;
@@ -18,6 +18,6 @@ div#content {
   <script src="/brueckl-hotvolleys/script/schedule.js"></script>
  </head>
  <body onload="getSchedule();">
-  <div id="content">Loading...</div>
+  <pre id="content">Loading...</pre>
  </body>
 </html>
