--- a/scheduleoffline.html
+++ b/scheduleoffline.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="/brueckl-hotvolleys/styles.css">
   <style>
-div#content {
+pre#content {
   padding: 20px;
   white-space: pre;
   font-family: monospace;
@@ -17,6 +17,6 @@ div#content {
   <script src="/brueckl-hotvolleys/script/schedule.js"></script>
  </head>
  <body onload="getScheduleOffline();">
-  <div id="content">Offline schedule is not stored yet.</div>
+  <pre id="content">Offline schedule is not stored yet.</pre>
  </body>
 </html>
