--- a/tabelle.html
+++ b/tabelle.html
@@ -5,11 +5,13 @@
   <link rel="stylesheet" href="/brueckl-hotvolleys/styles.css">
   <style>
 pre#content {
-  padding: 20px;
-  white-space: pre;
   font-family: monospace;
-  font-size: 16px;
   text-align: left;
+  font-size: 16px;
+  padding: 16px;
+}
+b.team {
+  font-size: 16px;
 }
   </style>
   <script src="/brueckl-hotvolleys/script/polyfills.js"></script>
