--- a/ov.html
+++ b/ov.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <title>Brückl hotvolleys</title>
   <link rel="stylesheet" href="/brueckl-hotvolleys/styles.css">
+  <link rel="stylesheet" href="/brueckl-hotvolleys/elements/expander/styles.css">
   <script src="/brueckl-hotvolleys/script/caching.js"></script>
+  <script src="/brueckl-hotvolleys/elements/expander/script.js"></script>
   <script>
 function init() {
   var toHide = ['u10', 'u11', 'u12', 'u13', 'u15', 'br4', 'br3', 'br2', 'nw', 'ak', 'info'];
