match - points info

--- a/_work/statistics.match.html
+++ b/_work/statistics.match.html
@@ -1,6 +1,6 @@
 <h4 id="m{{index}}" class="expandable" style="">{{info}}</h4>
-<div id="m{{index}}_2">
-  <table class="match" cellspacing="0" cellpadding="2" border="1" align="left">
+<div id="m{{index}}_2" class="match">
+  <table class="match" cellspacing="0" cellpadding="2" border="1">
     <tr>
       <th>&nbsp;</th>
       <th colspan="2" class="left">1. Satz</th>
@@ -24,5 +24,5 @@
     </tr>
     {{players}}
   </table>
-  <br clear="all" />
+  {{points}}
 </div>
