--- a/_work/statistics.html
+++ b/_work/statistics.html
@@ -9,11 +9,12 @@
 h4 {
   text-align: left;
 }
-div {
+/* -- match statistics ----------------------------------------------------- */
+div.match {
   padding-bottom: 15px;
 }
 table.match {
-  padding-left: 20px;
+  padding: 10px 0px 25px 20px;
 }
 table.match th {
   padding: 1px 2px;
@@ -64,13 +65,71 @@ table.match tr.minus td {
 table.match tr.footer td {
   background-color: lightgray;
 }
+/* -- points --------------------------------------------------------------- */
+div.container {
+  padding: 10px;
+}
+
+div.column {
+  position: relative;
+  width: 100px;
+  float: left;
+  padding: 10px;
+}
+div.header {
+  position: relative;
+  width: 100%;
+  font-size: 18px;
+}
+div.data {
+  position: relative;
+  width: 100%;
+}
+div.splitter {
+  position: absolute;
+  left: 49%;
+  width: 2%;
+  height: 100%;
+  background-color: dimgray;
+  overflow: hidden;
+  z-index: 1;
+}
+div.row {
+  position: relative;
+  width: 100%;
+  height: 25px;
+  background-color: yellow;
+  background-color: palegoldenrod;
+  padding: 6px 0 0 0;
+}
+
+div.a {
+  position: absolute;
+  width: 44%;
+  left: 5%;
+  height: 100%;
+  background-color: transparent;
+}
+div.b {
+  position: absolute;
+  width: 44%;
+  left: 51%;
+  height: 100%;
+  background-color: transparent;
+}
+div.pt {
+  background-color: red;
+  background-color: lightcoral;
+  font-size: 15px;
+  padding: 2px;
+}
   </style>
   <script src="/brueckl-hotvolleys/script/caching.js"></script>
   <script src="/brueckl-hotvolleys/elements/expander/script.js"></script>
   <script>
 function init() {
-  // TODO {{script}} or {{ids}}
-  var expanders = ['m1', 'm2', 'm3', 'm4', 'm5', 'm6', 'm7', 'm8', 'm9', 'm10', 'm11', 'm12'];
+  // var expanders = ['m1', 'm2', 'm3', 'm4', 'm5', 'm6', 'm7', 'm8', 'm9', 'm10', 'm11', 'm12'];
+  var expanders = [{{ids}}];
   bhv.elements.expander.init(expanders);
 }
   </script>
