--- a/uld/statistics3.html
+++ b/uld/statistics3.html
@@ -9,11 +9,12 @@
 h4 {
   text-align: left;
 }
-div {
+/* -- match statistics ----------------------------------------------------- */
+div.match {
   padding-bottom: 15px;
 }
 table.match {
-  padding-left: 20px;
+  padding: 10px 0px 25px 20px;
 }
 table.match th {
   padding: 1px 2px;
@@ -64,21 +65,79 @@ table.match tr.minus td {
 table.match tr.footer td {
   background-color: lightgray;
 }
+/* -- points --------------------------------------------------------------- */
+div.container {
+  padding: 10px;
+}
+
+div.column {
+  position: relative;
+  width: 100px;
+  float: left;
+  padding: 10px;
+}
+div.header {
+  position: relative;
+  width: 100%;
+  font-size: 18px;
+}
+div.data {
+  position: relative;
+  width: 100%;
+}
+div.splitter {
+  position: absolute;
+  left: 49%;
+  width: 2%;
+  height: 100%;
+  background-color: dimgray;
+  overflow: hidden;
+  z-index: 1;
+}
+div.row {
+  position: relative;
+  width: 100%;
+  height: 25px;
+  background-color: yellow;
+  background-color: palegoldenrod;
+  padding: 6px 0 0 0;
+}
+
+div.a {
+  position: absolute;
+  width: 44%;
+  left: 5%;
+  height: 100%;
+  background-color: transparent;
+}
+div.b {
+  position: absolute;
+  width: 44%;
+  left: 51%;
+  height: 100%;
+  background-color: transparent;
+}
+div.pt {
+  background-color: red;
+  background-color: lightcoral;
+  font-size: 15px;
+  padding: 2px;
+}
   </style>
   <script src="/brueckl-hotvolleys/script/caching.js"></script>
   <script src="/brueckl-hotvolleys/elements/expander/script.js"></script>
   <script>
 function init() {
-  // TODO {{script}} or {{ids}}
-  var expanders = ['m1', 'm2', 'm3', 'm4', 'm5', 'm6', 'm7', 'm8', 'm9', 'm10', 'm11', 'm12'];
+  // var expanders = ['m1', 'm2', 'm3', 'm4', 'm5', 'm6', 'm7', 'm8', 'm9', 'm10', 'm11', 'm12'];
+  var expanders = ['m1', 'mx1'];
   bhv.elements.expander.init(expanders);
 }
   </script>
 </head>
 <body onload="init();">
 <h4 id="m1" class="expandable" style="">26.Okt Brückl hotvolleys 3 - Villach 4</h4>
-<div id="m1_2">
-  <table class="match" cellspacing="0" cellpadding="2" border="1" align="left">
+<div id="m1_2" class="match">
+  <table class="match" cellspacing="0" cellpadding="2" border="1">
     <tr>
       <th>&nbsp;</th>
       <th colspan="2" class="left">1. Satz</th>
@@ -245,178 +304,160 @@ function init() {
 </tr>
 
   </table>
-  <br clear="all" />
-</div>
-<h4 id="m2" class="expandable" style="">27.Okt Brückl hotvolleys 3 - Villach 4</h4>
-<div id="m2_2">
-  <table class="match" cellspacing="0" cellpadding="2" border="1" align="left">
-    <tr>
-      <th>&nbsp;</th>
-      <th colspan="2" class="left">1. Satz</th>
-      <th colspan="2" class="left">2. Satz</th>
-      <th colspan="2" class="left">3. Satz</th>
-      <th colspan="2" class="left">4. Satz</th>
-      <th colspan="2" class="left">5. Satz</th>
-      <th>&nbsp;</th>
-      <th colspan="4" class="left">Gesamt</th>
-    </tr>
-    <tr>
-      <th>&nbsp;</th>
-      <th class="center">+</th><th class="center">-</th>
-      <th class="center">+</th><th class="center">-</th>
-      <th class="center">+</th><th class="center">-</th>
-      <th class="center">+</th><th class="center">-</th>
-      <th class="center">+</th><th class="center">-</th>
-      <th>&nbsp;</th>
-      <th class="center">+</th><th class="center">-</th>
-      <th class="center">Diff</th><th class="center">Quot</th>
-    </tr>
-    <tr class="plus">
-  <td class="name">Celi</td>
-  <td class="right">1</td><td class="right">2</td>
-  <td class="right">2</td><td class="right">0</td>
-  <td class="right">2</td><td class="right">0</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td>&nbsp;</td>
-  <td class="right sum">5</td><td class="right sum">2</td>
-  <td class="right sum">3</td><td class="right sumQ">2,500</td>
-</tr>
-<tr class="minus">
-  <td class="name">Nina</td>
-  <td class="right">1</td><td class="right">1</td>
-  <td class="right">3</td><td class="right">5</td>
-  <td class="right">1</td><td class="right">0</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td>&nbsp;</td>
-  <td class="right sum">5</td><td class="right sum">6</td>
-  <td class="right sum">-1</td><td class="right sumQ">0,833</td>
-</tr>
-<tr class="minus">
-  <td class="name">Steffi</td>
-  <td class="right">0</td><td class="right">0</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td class="right">0</td><td class="right">0</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td>&nbsp;</td>
-  <td class="right sum">0</td><td class="right sum">0</td>
-  <td class="right sum">0</td><td class="right sumQ">0,000</td>
-</tr>
-<tr class="plus">
-  <td class="name">Lea</td>
-  <td class="right">4</td><td class="right">4</td>
-  <td class="right">4</td><td class="right">1</td>
-  <td class="right">9</td><td class="right">4</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td>&nbsp;</td>
-  <td class="right sum">17</td><td class="right sum">9</td>
-  <td class="right sum">8</td><td class="right sumQ">1,889</td>
-</tr>
-<tr class="minus">
-  <td class="name">Yassi</td>
-  <td class="right">0</td><td class="right">1</td>
-  <td class="right">0</td><td class="right">1</td>
-  <td class="right">0</td><td class="right">0</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td>&nbsp;</td>
-  <td class="right sum">0</td><td class="right sum">2</td>
-  <td class="right sum">-2</td><td class="right sumQ">0,000</td>
-</tr>
-<tr class="medium">
-  <td class="name">Marleen</td>
-  <td class="right">3</td><td class="right">3</td>
-  <td class="right">1</td><td class="right">&nbsp;</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td>&nbsp;</td>
-  <td class="right sum">4</td><td class="right sum">3</td>
-  <td class="right sum">1</td><td class="right sumQ">1,333</td>
-</tr>
-<tr class="minus">
-  <td class="name">Franzi</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td class="right">0</td><td class="right">1</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td>&nbsp;</td>
-  <td class="right sum">0</td><td class="right sum">1</td>
-  <td class="right sum">-1</td><td class="right sumQ">0,000</td>
-</tr>
-<tr class="medium">
-  <td class="name">Nadine</td>
-  <td class="right">4</td><td class="right">2</td>
-  <td class="right">1</td><td class="right">3</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td>&nbsp;</td>
-  <td class="right sum">5</td><td class="right sum">5</td>
-  <td class="right sum">0</td><td class="right sumQ">1,000</td>
-</tr>
-<tr class="minus">
-  <td class="name">Magda</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td class="right">0</td><td class="right">0</td>
-  <td class="right">0</td><td class="right">0</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td>&nbsp;</td>
-  <td class="right sum">0</td><td class="right sum">0</td>
-  <td class="right sum">0</td><td class="right sumQ">0,000</td>
-</tr>
-<tr class="plus">
-  <td class="name">Kati</td>
-  <td class="right">3</td><td class="right">2</td>
-  <td class="right">2</td><td class="right">0</td>
-  <td class="right">1</td><td class="right">1</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td>&nbsp;</td>
-  <td class="right sum">6</td><td class="right sum">3</td>
-  <td class="right sum">3</td><td class="right sumQ">2,000</td>
-</tr>
-<tr class="plus">
-  <td class="name">Katha</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td class="right">0</td><td class="right">0</td>
-  <td class="right">1</td><td class="right">0</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td>&nbsp;</td>
-  <td class="right sum">1</td><td class="right sum">0</td>
-  <td class="right sum">1</td><td class="right sumQ">MAX</td>
-</tr>
-<tr class="plus">
-  <td class="name">Ylva</td>
-  <td class="right">74</td><td class="right">52</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td class="right">1</td><td class="right">0</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td>&nbsp;</td>
-  <td class="right sum">75</td><td class="right sum">52</td>
-  <td class="right sum">23</td><td class="right sumQ">1,442</td>
-</tr>
-<tr class="footer">
-  <td class="name"></td>
-  <td class="right">25</td><td class="right">20</td>
-  <td class="right">25</td><td class="right">15</td>
-  <td class="right">25</td><td class="right">17</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td class="right">&nbsp;</td><td class="right">&nbsp;</td>
-  <td>&nbsp;</td>
-  <td class="right sum">75</td><td class="right sum">52</td>
-  <td class="right sum">23</td><td class="right sumQ">1,442</td>
-</tr>
+  <h4 id="mx1" class="expandable" style="">Verlauf</h4>
+<div id="mx1_2" class="container">
+<div class="column">
+  <div class="header">1. Satz</div>
+  <div class="data">
+    <div class="splitter">&nbsp;</div>
+    <div class="row"><div class="a"><div class="pt">1</div></div></div>
+<div class="row"><div class="a"><div class="pt">2</div></div></div>
+<div class="row"><div class="a"><div class="pt">3</div></div></div>
+<div class="row"><div class="a"><div class="pt">4</div></div></div>
+<div class="row"><div class="b"><div class="pt">1</div></div></div>
+<div class="row"><div class="a"><div class="pt">5</div></div></div>
+<div class="row"><div class="a"><div class="pt">6</div></div></div>
+<div class="row"><div class="b"><div class="pt">2</div></div></div>
+<div class="row"><div class="b"><div class="pt">3</div></div></div>
+<div class="row"><div class="a"><div class="pt">7</div></div></div>
+<div class="row"><div class="a"><div class="pt">8</div></div></div>
+<div class="row"><div class="b"><div class="pt">4</div></div></div>
+<div class="row"><div class="b"><div class="pt">5</div></div></div>
+<div class="row"><div class="b"><div class="pt">6</div></div></div>
+<div class="row"><div class="b"><div class="pt">7</div></div></div>
+<div class="row"><div class="a"><div class="pt">9</div></div></div>
+<div class="row"><div class="b"><div class="pt">8</div></div></div>
+<div class="row"><div class="a"><div class="pt">10</div></div></div>
+<div class="row"><div class="a"><div class="pt">11</div></div></div>
+<div class="row"><div class="a"><div class="pt">12</div></div></div>
+<div class="row"><div class="a"><div class="pt">13</div></div></div>
+<div class="row"><div class="b"><div class="pt">9</div></div></div>
+<div class="row"><div class="a"><div class="pt">14</div></div></div>
+<div class="row"><div class="a"><div class="pt">15</div></div></div>
+<div class="row"><div class="b"><div class="pt">10</div></div></div>
+<div class="row"><div class="b"><div class="pt">11</div></div></div>
+<div class="row"><div class="a"><div class="pt">16</div></div></div>
+<div class="row"><div class="b"><div class="pt">12</div></div></div>
+<div class="row"><div class="b"><div class="pt">13</div></div></div>
+<div class="row"><div class="b"><div class="pt">14</div></div></div>
+<div class="row"><div class="a"><div class="pt">17</div></div></div>
+<div class="row"><div class="b"><div class="pt">15</div></div></div>
+<div class="row"><div class="a"><div class="pt">18</div></div></div>
+<div class="row"><div class="a"><div class="pt">19</div></div></div>
+<div class="row"><div class="b"><div class="pt">16</div></div></div>
+<div class="row"><div class="b"><div class="pt">17</div></div></div>
+<div class="row"><div class="a"><div class="pt">20</div></div></div>
+<div class="row"><div class="b"><div class="pt">18</div></div></div>
+<div class="row"><div class="b"><div class="pt">19</div></div></div>
+<div class="row"><div class="b"><div class="pt">20</div></div></div>
+<div class="row"><div class="a"><div class="pt">21</div></div></div>
+<div class="row"><div class="a"><div class="pt">22</div></div></div>
+<div class="row"><div class="a"><div class="pt">23</div></div></div>
+<div class="row"><div class="a"><div class="pt">24</div></div></div>
+<div class="row"><div class="a"><div class="pt">25</div></div></div>
 
-  </table>
-  <br clear="all" />
+  </div>
+</div>
+<div class="column">
+  <div class="header">2. Satz</div>
+  <div class="data">
+    <div class="splitter">&nbsp;</div>
+    <div class="row"><div class="a"><div class="pt">1</div></div></div>
+<div class="row"><div class="b"><div class="pt">1</div></div></div>
+<div class="row"><div class="a"><div class="pt">2</div></div></div>
+<div class="row"><div class="a"><div class="pt">3</div></div></div>
+<div class="row"><div class="a"><div class="pt">4</div></div></div>
+<div class="row"><div class="a"><div class="pt">5</div></div></div>
+<div class="row"><div class="b"><div class="pt">2</div></div></div>
+<div class="row"><div class="a"><div class="pt">6</div></div></div>
+<div class="row"><div class="a"><div class="pt">7</div></div></div>
+<div class="row"><div class="b"><div class="pt">3</div></div></div>
+<div class="row"><div class="a"><div class="pt">8</div></div></div>
+<div class="row"><div class="a"><div class="pt">9</div></div></div>
+<div class="row"><div class="b"><div class="pt">4</div></div></div>
+<div class="row"><div class="a"><div class="pt">10</div></div></div>
+<div class="row"><div class="b"><div class="pt">5</div></div></div>
+<div class="row"><div class="a"><div class="pt">11</div></div></div>
+<div class="row"><div class="a"><div class="pt">12</div></div></div>
+<div class="row"><div class="a"><div class="pt">13</div></div></div>
+<div class="row"><div class="b"><div class="pt">6</div></div></div>
+<div class="row"><div class="b"><div class="pt">7</div></div></div>
+<div class="row"><div class="b"><div class="pt">8</div></div></div>
+<div class="row"><div class="b"><div class="pt">9</div></div></div>
+<div class="row"><div class="b"><div class="pt">10</div></div></div>
+<div class="row"><div class="a"><div class="pt">14</div></div></div>
+<div class="row"><div class="a"><div class="pt">15</div></div></div>
+<div class="row"><div class="a"><div class="pt">16</div></div></div>
+<div class="row"><div class="b"><div class="pt">11</div></div></div>
+<div class="row"><div class="a"><div class="pt">17</div></div></div>
+<div class="row"><div class="b"><div class="pt">12</div></div></div>
+<div class="row"><div class="a"><div class="pt">18</div></div></div>
+<div class="row"><div class="a"><div class="pt">19</div></div></div>
+<div class="row"><div class="a"><div class="pt">20</div></div></div>
+<div class="row"><div class="a"><div class="pt">21</div></div></div>
+<div class="row"><div class="b"><div class="pt">13</div></div></div>
+<div class="row"><div class="a"><div class="pt">22</div></div></div>
+<div class="row"><div class="a"><div class="pt">23</div></div></div>
+<div class="row"><div class="a"><div class="pt">24</div></div></div>
+<div class="row"><div class="a"><div class="pt">25</div></div></div>
+<div class="row"><div class="b"><div class="pt">14</div></div></div>
+<div class="row"><div class="b"><div class="pt">15</div></div></div>
+
+  </div>
+</div>
+<div class="column">
+  <div class="header">3. Satz</div>
+  <div class="data">
+    <div class="splitter">&nbsp;</div>
+    <div class="row"><div class="a"><div class="pt">1</div></div></div>
+<div class="row"><div class="a"><div class="pt">2</div></div></div>
+<div class="row"><div class="b"><div class="pt">1</div></div></div>
+<div class="row"><div class="a"><div class="pt">3</div></div></div>
+<div class="row"><div class="a"><div class="pt">4</div></div></div>
+<div class="row"><div class="a"><div class="pt">5</div></div></div>
+<div class="row"><div class="b"><div class="pt">2</div></div></div>
+<div class="row"><div class="a"><div class="pt">6</div></div></div>
+<div class="row"><div class="b"><div class="pt">3</div></div></div>
+<div class="row"><div class="a"><div class="pt">7</div></div></div>
+<div class="row"><div class="a"><div class="pt">8</div></div></div>
+<div class="row"><div class="b"><div class="pt">4</div></div></div>
+<div class="row"><div class="a"><div class="pt">9</div></div></div>
+<div class="row"><div class="a"><div class="pt">10</div></div></div>
+<div class="row"><div class="a"><div class="pt">11</div></div></div>
+<div class="row"><div class="a"><div class="pt">12</div></div></div>
+<div class="row"><div class="a"><div class="pt">13</div></div></div>
+<div class="row"><div class="a"><div class="pt">14</div></div></div>
+<div class="row"><div class="a"><div class="pt">15</div></div></div>
+<div class="row"><div class="a"><div class="pt">16</div></div></div>
+<div class="row"><div class="b"><div class="pt">5</div></div></div>
+<div class="row"><div class="b"><div class="pt">6</div></div></div>
+<div class="row"><div class="a"><div class="pt">17</div></div></div>
+<div class="row"><div class="b"><div class="pt">7</div></div></div>
+<div class="row"><div class="a"><div class="pt">18</div></div></div>
+<div class="row"><div class="b"><div class="pt">8</div></div></div>
+<div class="row"><div class="a"><div class="pt">19</div></div></div>
+<div class="row"><div class="a"><div class="pt">20</div></div></div>
+<div class="row"><div class="b"><div class="pt">9</div></div></div>
+<div class="row"><div class="b"><div class="pt">10</div></div></div>
+<div class="row"><div class="a"><div class="pt">21</div></div></div>
+<div class="row"><div class="a"><div class="pt">22</div></div></div>
+<div class="row"><div class="a"><div class="pt">23</div></div></div>
+<div class="row"><div class="b"><div class="pt">11</div></div></div>
+<div class="row"><div class="a"><div class="pt">24</div></div></div>
+<div class="row"><div class="b"><div class="pt">12</div></div></div>
+<div class="row"><div class="b"><div class="pt">13</div></div></div>
+<div class="row"><div class="b"><div class="pt">14</div></div></div>
+<div class="row"><div class="b"><div class="pt">15</div></div></div>
+<div class="row"><div class="b"><div class="pt">16</div></div></div>
+<div class="row"><div class="b"><div class="pt">17</div></div></div>
+<div class="row"><div class="a"><div class="pt">25</div></div></div>
+
+  </div>
+</div>
+
+<br clear="all">
+</div>
+
 </div>
 
 </body>
