--- a/_work/statistics.html
+++ b/_work/statistics.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="/brueckl-hotvolleys/styles.css">
   <link rel="stylesheet" href="/brueckl-hotvolleys/elements/expander/styles.css">
   <style>
-h4 {
+h4, h5 {
   text-align: left;
 }
 /* -- match statistics ----------------------------------------------------- */
@@ -74,12 +74,14 @@ div.column {
   position: relative;
   width: 100px;
   float: left;
-  padding: 10px;
+  padding: 0 10px 10px;
 }
 div.header {
   position: relative;
   width: 100%;
-  font-size: 18px;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 3px 0;
 }
 div.data {
   position: relative;
