--- a/uld/statistics3.html
+++ b/uld/statistics3.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="/brueckl-hotvolleys/styles.css">
   <link rel="stylesheet" href="/brueckl-hotvolleys/elements/expander/styles.css">
   <style>
-h4 {
+h4, h5 {
   text-align: left;
 }
 /* -- match statistics ----------------------------------------------------- */
@@ -74,12 +74,14 @@ div.column {
   position: relative;
   width: 100px;
   float: left;
-  padding: 10px;
+  padding: 0 10px 10px;
 }
 div.header {
   position: relative;
   width: 100%;
-  font-size: 18px;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 3px 0;
 }
 div.data {
   position: relative;
@@ -304,7 +306,7 @@ function init() {
 </tr>
 
   </table>
-  <h4 id="mx1" class="expandable" style="">Verlauf</h4>
+  <h5 id="mx1" class="expandable" style="">Verlauf</h5>
 <div id="mx1_2" class="container">
 <div class="column">
   <div class="header">1. Satz</div>
@@ -362,46 +364,46 @@ function init() {
   <div class="header">2. Satz</div>
   <div class="data">
     <div class="splitter">&nbsp;</div>
-    <div class="row"><div class="a"><div class="pt">1</div></div></div>
-<div class="row"><div class="b"><div class="pt">1</div></div></div>
+    <div class="row"><div class="b"><div class="pt">1</div></div></div>
+<div class="row"><div class="a"><div class="pt">1</div></div></div>
+<div class="row"><div class="b"><div class="pt">2</div></div></div>
 <div class="row"><div class="a"><div class="pt">2</div></div></div>
 <div class="row"><div class="a"><div class="pt">3</div></div></div>
 <div class="row"><div class="a"><div class="pt">4</div></div></div>
 <div class="row"><div class="a"><div class="pt">5</div></div></div>
-<div class="row"><div class="b"><div class="pt">2</div></div></div>
+<div class="row"><div class="b"><div class="pt">3</div></div></div>
 <div class="row"><div class="a"><div class="pt">6</div></div></div>
 <div class="row"><div class="a"><div class="pt">7</div></div></div>
-<div class="row"><div class="b"><div class="pt">3</div></div></div>
+<div class="row"><div class="b"><div class="pt">4</div></div></div>
 <div class="row"><div class="a"><div class="pt">8</div></div></div>
 <div class="row"><div class="a"><div class="pt">9</div></div></div>
-<div class="row"><div class="b"><div class="pt">4</div></div></div>
-<div class="row"><div class="a"><div class="pt">10</div></div></div>
 <div class="row"><div class="b"><div class="pt">5</div></div></div>
-<div class="row"><div class="a"><div class="pt">11</div></div></div>
-<div class="row"><div class="a"><div class="pt">12</div></div></div>
-<div class="row"><div class="a"><div class="pt">13</div></div></div>
+<div class="row"><div class="a"><div class="pt">10</div></div></div>
 <div class="row"><div class="b"><div class="pt">6</div></div></div>
 <div class="row"><div class="b"><div class="pt">7</div></div></div>
 <div class="row"><div class="b"><div class="pt">8</div></div></div>
 <div class="row"><div class="b"><div class="pt">9</div></div></div>
 <div class="row"><div class="b"><div class="pt">10</div></div></div>
+<div class="row"><div class="a"><div class="pt">11</div></div></div>
+<div class="row"><div class="a"><div class="pt">12</div></div></div>
+<div class="row"><div class="a"><div class="pt">13</div></div></div>
+<div class="row"><div class="b"><div class="pt">11</div></div></div>
 <div class="row"><div class="a"><div class="pt">14</div></div></div>
 <div class="row"><div class="a"><div class="pt">15</div></div></div>
 <div class="row"><div class="a"><div class="pt">16</div></div></div>
-<div class="row"><div class="b"><div class="pt">11</div></div></div>
-<div class="row"><div class="a"><div class="pt">17</div></div></div>
 <div class="row"><div class="b"><div class="pt">12</div></div></div>
+<div class="row"><div class="a"><div class="pt">17</div></div></div>
+<div class="row"><div class="b"><div class="pt">13</div></div></div>
 <div class="row"><div class="a"><div class="pt">18</div></div></div>
 <div class="row"><div class="a"><div class="pt">19</div></div></div>
 <div class="row"><div class="a"><div class="pt">20</div></div></div>
 <div class="row"><div class="a"><div class="pt">21</div></div></div>
-<div class="row"><div class="b"><div class="pt">13</div></div></div>
+<div class="row"><div class="b"><div class="pt">14</div></div></div>
+<div class="row"><div class="b"><div class="pt">15</div></div></div>
 <div class="row"><div class="a"><div class="pt">22</div></div></div>
 <div class="row"><div class="a"><div class="pt">23</div></div></div>
 <div class="row"><div class="a"><div class="pt">24</div></div></div>
 <div class="row"><div class="a"><div class="pt">25</div></div></div>
-<div class="row"><div class="b"><div class="pt">14</div></div></div>
-<div class="row"><div class="b"><div class="pt">15</div></div></div>
 
   </div>
 </div>
