Simplify overview - move wanted into info

--- a/ov.html
+++ b/ov.html
@@ -16,9 +16,6 @@ function init() {
 </head>
 <body onload="init();">
 
-  <a href="gesucht"><h1>Gesucht!<br>Bitte an Freunde und Bekannte weiterleiten.</h1></a>
-
-  <br>
   <h1 id="nw" class="expandable" style="">Nachwuchs<br><br>(U10 U11 U12 U13 U15)</h1>
   <div id="nw_2">
 
@@ -98,6 +95,7 @@ function init() {
     <a href="info/info.html"><h3>Infos</h3></a>
     <a href="info/alletermine.html"><h3>Alle Termine</h3></a>
     <a href="info/wunschzettel.html"><h3>Ein Wunschzettel</h3></a>
+    <a href="info/gesucht.html"><h3>Gesucht!<br>Bitte an Freunde und Bekannte weiterleiten.</h3></a>
   </div>
 
 </body>
