--- a/ov.html
+++ b/ov.html
@@ -92,10 +92,9 @@ function init() {
   <br>
   <h1 id="info" class="expandable"><br>Infos<br>&nbsp;</h1>
   <div id="info_2">
-    <a href="info/info.html"><h3>Infos</h3></a>
-    <a href="info/alletermine.html"><h3>Alle Termine</h3></a>
     <a href="info/wunschzettel.html"><h3>Ein Wunschzettel</h3></a>
     <a href="info/gesucht.html"><h3>Gesucht!<br>Bitte an Freunde und Bekannte weiterleiten.</h3></a>
+    <a href="info/info.html"><h3>Allgemeine Infos</h3></a>
   </div>
 
 </body>
