sort ids of expanders

--- a/ov.html
+++ b/ov.html
@@ -9,7 +9,13 @@
   <script src="/brueckl-hotvolleys/elements/expander/script.js"></script>
   <script>
 function init() {
-  var expanders = ['u10', 'u11', 'u12', 'u13', 'u15', 'br4', 'br3', 'br2', 'br1', 'nw', 'ak', 'info'];
+  var expanders = [
+    'nw',
+    'u10', 'u11', 'u12', 'u13', 'u15',
+    'ak',
+    'br4', 'br3', 'br2', 'br1',
+    'info'
+  ];
   bhv.elements.expander.init(expanders);
 }
   </script>
