Add favicon to all html files

--- a/ov.html
+++ b/ov.html
@@ -5,6 +5,7 @@
   <title>Brückl hotvolleys</title>
   <link rel="stylesheet" href="/brueckl-hotvolleys/styles.css">
   <link rel="stylesheet" href="/brueckl-hotvolleys/elements/expander/styles.css">
+  <link rel="shortcut icon" href="/brueckl-hotvolleys/favicons/favicon.ico">
   <script src="/brueckl-hotvolleys/script/caching.js"></script>
   <script src="/brueckl-hotvolleys/elements/expander/script.js"></script>
   <script>
@@ -56,7 +57,7 @@ function init() {
     <h2 id="u15" class="expandable">U15</h1>
     <div id="u15_2">
       <!--a href="u15"><h3>Grundlagen</h3></a-->
-      <a href="u15/termine15.html"><h3>Spieltermine</h3></a>
+      <a href="u15/termine.html"><h3>Spieltermine</h3></a>
       <!--a href="schedule.html?key=u15"><h3>Spieltermine</h3></a-->
       <!--a href="tabelle.html?key=u15w"><h3>Tabelle U15w</h3></a-->
     </div>
