--- a/_work/statistics.html
+++ b/_work/statistics.html
@@ -9,6 +9,10 @@
 h4, h5 {
   text-align: left;
 }
+/* no any margin for first header */
+h4:first-child, h4:first-of-type {
+  margin: 0;
+}
 /* -- match statistics ----------------------------------------------------- */
 div.match {
   padding-bottom: 15px;
