Additional infos for game statistics

--- a/_work/statistics.html
+++ b/_work/statistics.html
@@ -129,6 +129,27 @@ div.pt {
   font-size: 15px;
   padding: 2px;
 }
+div.to {
+  background-color: lightgray;
+  font-size: 15px;
+  padding: 2px;
+}
+div.subst > div.in {
+  font-size: 9px;
+  padding: 1px;
+  background-color: yellowgreen;
+  font-weight: bold;
+  white-space: nowrap;
+  overflow: hidden;
+}
+div.subst > div.out {
+  font-size: 8px;
+  padding: 1px;
+  background-color: red;
+  background-color: lightcoral;
+  white-space: nowrap;
+  overflow: hidden;
+}
   </style>
   <script src="/brueckl-hotvolleys/script/caching.js"></script>
   <script src="/brueckl-hotvolleys/elements/expander/script.js"></script>
