Service info for game statistics

--- a/_work/statistics.html
+++ b/_work/statistics.html
@@ -150,6 +150,23 @@ div.subst > div.out {
   white-space: nowrap;
   overflow: hidden;
 }
+div.serv > div.srvheader {
+  font-size: 8px;
+  padding: 1px;
+  background-color: lightgray;
+  white-space: nowrap;
+  overflow: hidden;
+}
+div.serv > div.info {
+  font-size: 9px;
+  padding: 1px;
+  white-space: nowrap;
+  overflow: hidden;
+
+  font-weight: bold;
+  background-color: dimgray;
+  color: #eee;
+}
   </style>
   <script src="/brueckl-hotvolleys/script/caching.js"></script>
   <script src="/brueckl-hotvolleys/elements/expander/script.js"></script>
