remove manifest, read kids schedule from xml service

--- a/_work/statistics.html
+++ b/_work/statistics.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="/brueckl-hotvolleys/cache.manifest">
+<html>
 <head>
   <meta charset="UTF-8">
   <title>Brückl hotvolleys</title>
@@ -168,7 +168,6 @@ div.serv > div.info {
   color: #eee;
 }
   </style>
-  <script src="/brueckl-hotvolleys/script/caching.js"></script>
   <script src="/brueckl-hotvolleys/elements/expander/script.js"></script>
   <script>
 function init() {
