Updates for of new info page (..-old.htmlfiles for prev site)

--- a/imageview-old.html
+++ b/imageview-old.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Brückl hotvolleys</title>
-  <link rel="shortcut icon" href="/favicons/favicon.ico">
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="shortcut icon" href="/brueckl-hotvolleys/favicons/favicon.ico">
+  <link rel="stylesheet" href="/brueckl-hotvolleys/styles.css">
   <style>
 div {
   position: absolute;
@@ -25,7 +25,7 @@ function setImage() {
   if (s && s.length > 1) {
     var elem = document.getElementById('img');
     if (elem) {
-      elem.style.backgroundImage = 'url("/' + s.substr(1) +'")';
+      elem.style.backgroundImage = 'url("/brueckl-hotvolleys/' + s.substr(1) +'")';
     }
   }
 }
