--- a/schedule.html
+++ b/schedule.html
@@ -2,8 +2,8 @@
 <html>
  <head>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="/brueckl-hotvolleys/styles.css">
-  <link rel="shortcut icon" href="/brueckl-hotvolleys/favicons/favicon.ico">
+  <link rel="stylesheet" href="/styles.css">
+  <link rel="shortcut icon" href="/favicons/favicon.ico">
   <style>
 pre#content {
   font-family: monospace;
@@ -19,10 +19,10 @@ b.team {
   padding: 0px;
 }
   </style>
-  <script src="/brueckl-hotvolleys/script/polyfills.js"></script>
-  <script src="/brueckl-hotvolleys/script/db.js"></script>
-  <script src="/brueckl-hotvolleys/script/request.js"></script>
-  <script src="/brueckl-hotvolleys/script/schedule.js"></script>
+  <script src="/script/polyfills.js"></script>
+  <script src="/script/db.js"></script>
+  <script src="/script/request.js"></script>
+  <script src="/script/schedule.js"></script>
  </head>
  <body onload="getSchedule();">
   <pre id="content">Loading...</pre>
