--- a/uld/grundlagen3/aufspiel/index-old.html
+++ b/uld/grundlagen3/aufspiel/index-old.html
@@ -2,7 +2,7 @@
 <html>
   <meta charset="UTF-8">
   <title>Brückl hotvolleys 3 - Aufspiel</title>
-  <link rel="shortcut icon" href="/favicons/favicon.ico">
+  <link rel="shortcut icon" href="/brueckl-hotvolleys/favicons/favicon.ico">
   <style>
 *, html, body {
   margin: 0px;
