--- a/uld/grundlagen3/blockinfo/block-old.html
+++ b/uld/grundlagen3/blockinfo/block-old.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Brückl hotvolleys</title>
-  <link rel="stylesheet" href="/styles.css">
-  <link rel="shortcut icon" href="/favicons/favicon.ico">
+  <link rel="stylesheet" href="/brueckl-hotvolleys/styles.css">
+  <link rel="shortcut icon" href="/brueckl-hotvolleys/favicons/favicon.ico">
   <style>
 h1 {
   padding: 10px;
