--- a/uld/grundlagen3/index.html
+++ b/uld/grundlagen3/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Brückl hotvolleys</title>
-  <link rel="stylesheet" href="/brueckl-hotvolleys/styles.css">
-  <link rel="shortcut icon" href="/brueckl-hotvolleys/favicons/favicon.ico">
+  <link rel="stylesheet" href="/styles.css">
+  <link rel="shortcut icon" href="/favicons/favicon.ico">
 </head>
 <body>
 
   <h1 class="tactics">Annahme</h1>
   <table class="tactics" align="center" cellspacing="0" cellpadding="10">
     <tr>
-      <td><a href="/brueckl-hotvolleys/imageview.html?uld/grundlagen3/annahme/zudritt.png"><img src="annahme/zudritt.png" alt="3er Riegel"></a></td>
+      <td><a href="/imageview.html?uld/grundlagen3/annahme/zudritt.png"><img src="annahme/zudritt.png" alt="3er Riegel"></a></td>
     </tr>
     <tr>
-      <td><a href="/brueckl-hotvolleys/imageview.html?uld/grundlagen3/annahme/zudritt.png"><div>3er Riegel</div></a></td>
+      <td><a href="/imageview.html?uld/grundlagen3/annahme/zudritt.png"><div>3er Riegel</div></a></td>
     </tr>
   </table>
 
@@ -31,10 +31,10 @@
   <h1 class="tactics">Basis</h1>
   <table class="tactics" align="center" cellspacing="0" cellpadding="10">
     <tr>
-      <td><a href="/brueckl-hotvolleys/imageview.html?uld/grundlagen3/basis/basis.png"><img src="basis/basis.png" alt="Die Basis"></a></td>
+      <td><a href="/imageview.html?uld/grundlagen3/basis/basis.png"><img src="basis/basis.png" alt="Die Basis"></a></td>
     </tr>
     <tr>
-      <td><a href="/brueckl-hotvolleys/imageview.html?uld/grundlagen3/basis/basis.png"><div>Die Basis</div></a></td>
+      <td><a href="/imageview.html?uld/grundlagen3/basis/basis.png"><div>Die Basis</div></a></td>
     </tr>
   </table>
 
@@ -50,24 +50,24 @@
 
   <table class="tactics" align="center" cellspacing="0" cellpadding="10">
     <tr>
-      <td><a href="/brueckl-hotvolleys/imageview.html?uld/grundlagen3/block/block4.png"><h3>Block 4</h3></a></td>
-      <td><a href="/brueckl-hotvolleys/imageview.html?uld/grundlagen3/block/block3.png"><h3>Block 3</h3></a></td>
-      <td><a href="/brueckl-hotvolleys/imageview.html?uld/grundlagen3/block/block3x.png"><h3>Block 3</h3></a></td>
-      <td><a href="/brueckl-hotvolleys/imageview.html?uld/grundlagen3/block/block2.png"><h3>Block 2</h3></a></td>
+      <td><a href="/imageview.html?uld/grundlagen3/block/block4.png"><h3>Block 4</h3></a></td>
+      <td><a href="/imageview.html?uld/grundlagen3/block/block3.png"><h3>Block 3</h3></a></td>
+      <td><a href="/imageview.html?uld/grundlagen3/block/block3x.png"><h3>Block 3</h3></a></td>
+      <td><a href="/imageview.html?uld/grundlagen3/block/block2.png"><h3>Block 2</h3></a></td>
     </tr>
 
     <tr>
-      <td><a href="/brueckl-hotvolleys/imageview.html?uld/grundlagen3/block/block4.png"><img src="block/block4.png" alt="Block Pos 4"></a></td>
-      <td><a href="/brueckl-hotvolleys/imageview.html?uld/grundlagen3/block/block3.png"><img src="block/block3.png" alt="Block Pos 3"></a></td>
-      <td><a href="/brueckl-hotvolleys/imageview.html?uld/grundlagen3/block/block3x.png"><img src="block/block3x.png" alt="Block Pos 3 (Schnellangriff)"></a></td>
-      <td><a href="/brueckl-hotvolleys/imageview.html?uld/grundlagen3/block/block2.png"><img src="block/block2.png" alt="block Pos 2"></a></td>
+      <td><a href="/imageview.html?uld/grundlagen3/block/block4.png"><img src="block/block4.png" alt="Block Pos 4"></a></td>
+      <td><a href="/imageview.html?uld/grundlagen3/block/block3.png"><img src="block/block3.png" alt="Block Pos 3"></a></td>
+      <td><a href="/imageview.html?uld/grundlagen3/block/block3x.png"><img src="block/block3x.png" alt="Block Pos 3 (Schnellangriff)"></a></td>
+      <td><a href="/imageview.html?uld/grundlagen3/block/block2.png"><img src="block/block2.png" alt="block Pos 2"></a></td>
     </tr>
 
     <tr>
-      <td><a href="/brueckl-hotvolleys/imageview.html?uld/grundlagen3/block/block4.png"><div>Block auf Pos 4.</div></a></td>
-      <td><a href="/brueckl-hotvolleys/imageview.html?uld/grundlagen3/block/block3.png"><div>Block auf Pos 3.</div></a></td>
-      <td><a href="/brueckl-hotvolleys/imageview.html?uld/grundlagen3/block/block3x.png"><div>Block auf Pos 3 gegen Schnellangriff.</div></a></td>
-      <td><a href="/brueckl-hotvolleys/imageview.html?uld/grundlagen3/block/block2.png"><div>Block auf Pos 2.</div></a></td>
+      <td><a href="/imageview.html?uld/grundlagen3/block/block4.png"><div>Block auf Pos 4.</div></a></td>
+      <td><a href="/imageview.html?uld/grundlagen3/block/block3.png"><div>Block auf Pos 3.</div></a></td>
+      <td><a href="/imageview.html?uld/grundlagen3/block/block3x.png"><div>Block auf Pos 3 gegen Schnellangriff.</div></a></td>
+      <td><a href="/imageview.html?uld/grundlagen3/block/block2.png"><div>Block auf Pos 2.</div></a></td>
     </tr>
   </table>
 </body>
