--- a/_work/favicons/index.html
+++ b/_work/favicons/index.html
@@ -1,12 +1,11 @@
 <html>  <head>
-<link rel="apple-touch-icon" sizes="180x180" href="/brueckl-hotvolleys/favicons/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/brueckl-hotvolleys/favicons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/brueckl-hotvolleys/favicons/favicon-16x16.png">
-<link rel="manifest" href="/brueckl-hotvolleys/favicons/site.webmanifest">
-<link rel="mask-icon" href="/brueckl-hotvolleys/favicons/safari-pinned-tab.svg" color="#5bbad5">
-<link rel="shortcut icon" href="/brueckl-hotvolleys/favicons/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+<link rel="manifest" href="/favicons/site.webmanifest">
+<link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/favicons/favicon.ico">
 <meta name="msapplication-TileColor" content="#b91d47">
-<meta name="msapplication-TileImage" content="/brueckl-hotvolleys/favicons/mstile-144x144.png">
-<meta name="msapplication-config" content="/brueckl-hotvolleys/favicons/browserconfig.xml">
-<meta name="theme-color" content="#ffffff">
-</head>  <body>  </body></html>
+<meta name="msapplication-TileImage" content="/favicons/mstile-144x144.png">
+<meta name="msapplication-config" content="/favicons/browserconfig.xml">
+<meta name="theme-color" content="#ffffff"></head>  <body>  </body></html>
