--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8">
   <title>Brückl hotvolleys</title>
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/brueckl-hotvolleys/favicons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/brueckl-hotvolleys/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/brueckl-hotvolleys/favicons/favicon-16x16.png">
-  <link rel="manifest" href="/brueckl-hotvolleys/favicons/site.webmanifest">
-  <link rel="mask-icon" href="/brueckl-hotvolleys/favicons/safari-pinned-tab.svg" color="#5bbad5">
-  <link rel="shortcut icon" href="/brueckl-hotvolleys/favicons/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+  <link rel="manifest" href="/favicons/site.webmanifest">
+  <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="/favicons/favicon.ico">
   <meta name="msapplication-TileColor" content="#b91d47">
-  <meta name="msapplication-TileImage" content="/brueckl-hotvolleys/favicons/mstile-144x144.png">
-  <meta name="msapplication-config" content="/brueckl-hotvolleys/favicons/browserconfig.xml">
+  <meta name="msapplication-TileImage" content="/favicons/mstile-144x144.png">
+  <meta name="msapplication-config" content="/favicons/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
-  <link rel="stylesheet" href="/brueckl-hotvolleys/styles.css">
+  <link rel="stylesheet" href="/styles.css">
   <style>
 a {
   position: absolute;
