--- a/info/gesucht-old.html
+++ b/info/gesucht-old.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Brückl hotvolleys</title>
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="/brueckl-hotvolleys/styles.css">
   <style>
 div {
   position: absolute;
@@ -11,7 +11,7 @@ div {
   top: 0;
   width: 100%;
   height: 100%;
-  background-image: url("/info/gesucht.jpeg");
+  background-image: url("/brueckl-hotvolleys/info/gesucht.jpeg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100%;
