--- a/info/wunschzettel-old.html
+++ b/info/wunschzettel-old.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Brückl hotvolleys</title>
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="/brueckl-hotvolleys/styles.css">
   <style>
 p {
   margin: 2%;
