--- a/ov-old.html
+++ b/ov-old.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Brückl hotvolleys</title>
-  <link rel="stylesheet" href="/styles.css">
-  <link rel="stylesheet" href="/elements/expander/styles.css">
-  <link rel="shortcut icon" href="/favicons/favicon.ico">
-  <script src="/elements/expander/script.js"></script>
+  <link rel="stylesheet" href="/brueckl-hotvolleys/styles.css">
+  <link rel="stylesheet" href="/brueckl-hotvolleys/elements/expander/styles.css">
+  <link rel="shortcut icon" href="/brueckl-hotvolleys/favicons/favicon.ico">
+  <script src="/brueckl-hotvolleys/elements/expander/script.js"></script>
   <script>
 function init() {
   var expanders = [
