--- a/uld/grundlagen/index.html
+++ b/uld/grundlagen/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Brückl hotvolleys</title>
-  <link rel="stylesheet" href="/brueckl-hotvolleys/styles.css">
-  <link rel="shortcut icon" href="/brueckl-hotvolleys/favicons/favicon.ico">
+  <link rel="stylesheet" href="/styles.css">
+  <link rel="shortcut icon" href="/favicons/favicon.ico">
 </head>
 <body>
 
@@ -12,18 +12,18 @@
   <table class="tactics" align="center" cellspacing="0" cellpadding="10">
 
     <tr>
-      <td><a href="/brueckl-hotvolleys/imageview.html?uld/grundlagen/spielfeld.png"><h3>Spielfeld</h3></a></td>
-      <td><a href="/brueckl-hotvolleys/imageview.html?uld/grundlagen/positionen.png"><h3>Positionen</h3></a></td>
+      <td><a href="/imageview.html?uld/grundlagen/spielfeld.png"><h3>Spielfeld</h3></a></td>
+      <td><a href="/imageview.html?uld/grundlagen/positionen.png"><h3>Positionen</h3></a></td>
     </tr>
 
     <tr>
-      <td><a href="/brueckl-hotvolleys/imageview.html?uld/grundlagen/spielfeld.png"><img src="spielfeld.png" alt="Spielfeld"></a></td>
-      <td><a href="/brueckl-hotvolleys/imageview.html?uld/grundlagen/positionen.png"><img src="positionen.png" alt="Positionen"></a></td>
+      <td><a href="/imageview.html?uld/grundlagen/spielfeld.png"><img src="spielfeld.png" alt="Spielfeld"></a></td>
+      <td><a href="/imageview.html?uld/grundlagen/positionen.png"><img src="positionen.png" alt="Positionen"></a></td>
     </tr>
 
     <tr>
-      <td><a href="/brueckl-hotvolleys/imageview.html?uld/grundlagen/spielfeld.png"><div>Das Spielfeld.</div></a></td>
-      <td><a href="/brueckl-hotvolleys/imageview.html?uld/grundlagen/positionen.png"><div>Die Positionen der Spielerinnen.</div></a></td>
+      <td><a href="/imageview.html?uld/grundlagen/spielfeld.png"><div>Das Spielfeld.</div></a></td>
+      <td><a href="/imageview.html?uld/grundlagen/positionen.png"><div>Die Positionen der Spielerinnen.</div></a></td>
     </tr>
   </table>
 </body>
