--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@ a {
   top: 0;
   width: 100%;
   height: 100%;
-  background-image: url("image/logo.png");
+  background-image: url("/image/logo.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100%;
@@ -21,6 +21,6 @@ a {
   </style>
 </head>
 <body>
-  <a href="ov.html">&nbsp;</a>
+  <a href="/ov.html">&nbsp;</a>
 </body>
 </html>
