--- a/ov.html
+++ b/ov.html
@@ -101,6 +101,7 @@ function init() {
   <br>
   <h1 id="info" class="expandable"><br>Infos<br>&nbsp;</h1>
   <div id="info_2">
+    <a href="calendar/calendar.html"><h3>Kalender</h3></a>
     <a href="info/wunschzettel.html"><h3>Ein Wunschzettel</h3></a>
     <a href="info/gesucht.html"><h3>Gesucht!<br>Bitte an Freunde und Bekannte weiterleiten.</h3></a>
     <a href="info/info.html"><h3>Allgemeine Infos</h3></a>
