--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -205,7 +205,7 @@ Brückl Hotvolleys<div>Brückl Hotvolleys</div>
   position: relative;
   width: 100%;
   margin-bottom: 1px;
-  padding: 3px 3px;
+  padding: 7px 3px;
   overflow: hidden;
 
   font-size: 9px;
@@ -224,6 +224,8 @@ Brückl Hotvolleys<div>Brückl Hotvolleys</div>
   left: 0;
   width: 100%;
   height: 100%;
+  padding: 10px;
+  box-sizing: border-box;
 
   overflow: auto;
   z-index: 9;
@@ -232,8 +234,15 @@ Brückl Hotvolleys<div>Brückl Hotvolleys</div>
   font-size: 15px;
   text-align: left;
   white-space: pre;
+  font-family: Consolas, "Courier New", monospace;
 
   cursor: pointer;
+}
+#content > .entryInfo > b {
+  font-size: 15px;
+  text-align: left;
+  white-space: pre;
+  font-family: Consolas, "Courier New", monospace;
 }
   </style>
 </head>
