--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -113,7 +113,7 @@ Brückl Hotvolleys<div>Brückl Hotvolleys</div>
 #header > .title {
   position: absolute;
   left: 160px;
-  right: 160px
+  right: 160px;
   height: 26px;
   text-align: left;
   font-size: 20px;
