--- a/info/wunschzettel.html
+++ b/info/wunschzettel.html
@@ -51,12 +51,12 @@ img.logo {
   </style>
 </head>
 <body>
-<img class="ball1" src="../image/ball32.png" />
+<img class="ball1" src="../image/ball32.png" alt="Volleyball" />
 <div style="float: left; position: relative; margin-top: 1%;">
 <h1>Liebe Spielerin, lieber Spieler!</h1><br>
 <h2>Ein Wunschzettel</h2>
 </div>
-<img class="logo" src="../image/logo.png" />
+<img class="logo" src="../image/logo.png" alt="Logo Brückl Hotvolleys" />
 <br clear="all" />
 <p>Als Volleyballtrainer ist mit der Sport natürlich ein ganz besonderes Anliegen. Aber daneben gibt es auch
 noch andere wichtige Dinge im Leben. Eines davon, und ein nicht ganz Unwichtiges, nennt sich Schule.</p>
