--- a/uld/grundlagen3/blockinfo/block.html
+++ b/uld/grundlagen3/blockinfo/block.html
@@ -89,7 +89,7 @@ div.idee {
     </tr>
     <tr>
       <td class="td1">
-        <img src="aktiv.gif" />
+        <img src="aktiv.gif" alt="Aktiver Block" />
       </td>
       <td class="td2">
         <b>Aktiver Block</b><br>
@@ -99,7 +99,7 @@ div.idee {
     </tr>
     <tr>
       <td class="td1">
-        <img src="passiv.gif" />
+        <img src="passiv.gif" alt="Passiver Block" />
       </td>
       <td class="td2">
         <b>Passiver Block</b><br>
@@ -115,7 +115,7 @@ div.idee {
     </tr>
     <tr>
       <td class="td1">
-        <img src="block1.gif" />
+        <img src="block1.gif" alt="Einzelblock" />
       </td>
       <td class="td2">
         <b>Einzelblock</b><br>
@@ -124,7 +124,7 @@ div.idee {
     </tr>
     <tr>
       <td class="td1">
-        <img src="block2.gif" />
+        <img src="block2.gif" alt="Doppelblock" />
       </td>
       <td class="td2">
         <b>Doppelblock</b><br>
@@ -135,7 +135,7 @@ div.idee {
     <tr><td colspan="2"><h1>Basis (Vorbereitung zum Block)</h1></td></tr>
     <tr>
       <td class="td1">
-        <img src="grundstellung.gif" />
+        <img src="grundstellung.gif" alt="Vorbereitung zum Block - Grundpositionen" />
       </td>
       <td class="td2">
         <b>Gegenüber der jeweiligen Angreiferin</b><br>
@@ -145,7 +145,7 @@ div.idee {
     </tr>
     <tr>
       <td class="td1">
-        <img src="grundstellung2.gif" />
+        <img src="grundstellung2.gif" alt="Vorbereitung zum Block - Grundpositionen" />
       </td>
       <td class="td2">
         <b>Aufspielerin vorne</b><br>
@@ -158,7 +158,7 @@ div.idee {
     <tr>
       <td class="td1">
         <div class="move">
-        <img class="move" src="bewegung3.png" />
+        <img class="move" src="bewegung3.png" alt="Bewegung zum Block" />
         </div>
       </td>
       <td class="td2">
@@ -169,7 +169,7 @@ div.idee {
     <tr>
       <td class="td1">
         <div class="move">
-        <img class="move" src="bewegung4.png" />
+        <img class="move" src="bewegung4.png" alt="Bewegung zum Block (4 Schritte)" />
         </div>
       </td>
       <td class="td2">
@@ -181,7 +181,7 @@ div.idee {
     <tr><td colspan="2"><h1>Blockposition</h1></td></tr>
     <tr>
       <td class="td1">
-        <img class="pos" src="zur_mitte.gif" />
+        <img class="pos" src="zur_mitte.gif" alt="Armhaltung" />
       </td>
       <td class="td2">
         <b>Wo wird gesprungen?</b><br>
