--- a/results.html
+++ b/results.html
@@ -2,6 +2,7 @@
 <html>
  <head>
   <meta charset="utf-8" />
+  <title>Brückl hotvolleys</title>
   <link rel="stylesheet" href="/styles.css">
   <link rel="shortcut icon" href="/favicons/favicon.ico">
   <style>
@@ -25,6 +26,6 @@ b.team {
   <script src="/script/results.js"></script>
  </head>
  <body onload="getResults();">
-  <pre id="content">Loading...<pre>
+  <pre id="content">Loading...</pre>
  </body>
 </html>
