--- a/schedule.html
+++ b/schedule.html
@@ -2,6 +2,7 @@
 <html>
  <head>
   <meta charset="utf-8" />
+  <title>Brückl hotvolleys</title>
   <link rel="stylesheet" href="/styles.css">
   <link rel="shortcut icon" href="/favicons/favicon.ico">
   <style>
