svg views for setting/attack

--- a/uld/grundlagen3/index.html
+++ b/uld/grundlagen3/index.html
@@ -4,6 +4,16 @@
   <meta charset="UTF-8">
   <title>Brückl hotvolleys</title>
   <link rel="stylesheet" href="/styles.css">
+  <style>
+a.line {
+  padding: 5px 10px;
+  display: block;
+  text-align: left;
+}
+a.line.line1 {
+  background-color: #EEE;
+}
+  </style>
   <link rel="shortcut icon" href="/favicons/favicon.ico">
 </head>
 <body>
@@ -20,11 +30,18 @@
 
   <h1 class="tactics">Aufspiel</h1>
   <table class="tactics" align="center" cellspacing="0" cellpadding="10">
+
     <tr>
       <td><a href="aufspiel"><h3>Die Codes</h3></a></td>
+      <td><a href="aufspiel"><h3>Wo und Wann</h3></a></td>
     </tr>
     <tr>
       <td><a href="aufspiel"><img src="aufspiel/plan.png" alt="Codes und Varianten"></a></td>
+      <td style="vertical-align: top;">
+        <a class="line line1" href="aufspiel/wann1.html">Wann 1</a>
+        <a class="line" href="aufspiel/wann2.html">Wann 2</a>
+        <a class="line line1" href="aufspiel/wo.html">Wo</a>
+      </td>
     </tr>
   </table>
 
