--- a/uld/grundlagen3/index.html
+++ b/uld/grundlagen3/index.html
@@ -28,12 +28,12 @@ a.line.line1 {
     </tr>
   </table>
 
-  <h1 class="tactics">Aufspiel</h1>
+  <h1 class="tactics">Aufspiel + Angriff</h1>
   <table class="tactics" align="center" cellspacing="0" cellpadding="10">
 
     <tr>
       <td><a href="aufspiel"><h3>Die Codes</h3></a></td>
-      <td><a href="aufspiel"><h3>Wo und Wann</h3></a></td>
+      <td><h3>Wann und Wo</h3></td>
     </tr>
     <tr>
       <td><a href="aufspiel"><img src="aufspiel/plan.png" alt="Codes und Varianten"></a></td>
